[project]
name = "toolbox"
description = "A collection of utility nodes for ComfyUI, including audio/video processing, file uploads, and AI image generation."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["# ComfyUI-ToolBox requirements", "# 基本依赖", "numpy>=1.20.0", "Pillow>=9.0.0", "torch>=1.10.0", "# AWS S3上传功能", "boto3>=1.26.0", "botocore>=1.29.0", "# 处理文件路径和网络请求", "requests>=2.27.0"]

[project.urls]
Repository = "https://github.com/synthetai/ComfyUI-ToolBox"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-ToolBox"
Icon = ""
